--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
     -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	                               <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">	
+		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.css' rel='stylesheet'/>
+	                              <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">	
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
