--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,12 @@
       https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.googleapis.com"> 
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,300&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.css' rel='stylesheet'/>
-	                              <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">	
+	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.css' rel='stylesheet'/>
+	<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">	
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
